# reasons-rust

./: Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: release.yml
src/: db.rs  format.rs  main.rs  mcp.rs  tms.rs  types.rs
src/commands/: add.rs  challenge.rs  export.rs  import.rs  manage.rs  mod.rs  nogood.rs  query.rs  retract.rs  tree.rs
tests/: integration.rs
