[package]
name = "reasons"
version = "0.1.0"
edition = "2021"
description = "Truth Maintenance System for managing justified beliefs"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
